# Devlog

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: backend_discovery_cd.yml  backend_gateway_cd.yml  backend_llm_cd.yml  backend_mail_cd.yml  backend_main_cd.yml  backend_main_ci.yml  backend_main_cicd.yml  backend_prod_deploy.yml  backend_sitemap_cd.yml  frontend_dev_cd.yml  frontend_main_cd.yml  main_cd.yml
backend/: .gitignore  Dockerfile  Dockerfile.prod  build.gradle
backend/discovery-service/: Dockerfile  Dockerfile.prod  build.gradle
backend/gateway-service/: Dockerfile  Dockerfile.prod  build.gradle
backend/llm-service/: Dockerfile  Dockerfile.image.build  Dockerfile.prod  app.py  build.image.sh  pyproject.toml
backend/llm-service/app/api/: __init__.py  llm.py  llm_controller.py  test_controller.py
backend/llm-service/app/message/: reuqest_llm_message.py
backend/llm-service/app/utils/: __init__.py  feign_provider.py
backend/mail-service/: Dockerfile  Dockerfile.prod  build.gradle
backend/main-service/: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  build.gradle
backend/sitemap-service/: .gitignore  Dockerfile  Dockerfile.prod  build.gradle  settings.gradle
frontend/: .env  .env.development  .env.production  .gitignore  .prettierrc  Dockerfile  Dockerfile.prod  README.md  index.html  jsconfig.json  next.config.mjs  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html  manifest.json
mailserver/: Dockerfile  Dockerfile.prod  build.gradle
(+575 files in other folders)
