[tool.poetry]
name = "llmserver"
version = "0.1.0"
description = ""
authors = ["JangSeHun <westreed@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
python-dotenv = "^1.0.1"
openai = "^1.51.0"
py-eureka-client = "^0.11.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
